# ipyprogressivis

./: .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  RELEASE.md  mypy_ci.ini  pyproject.toml  refresh_pv.sh  setup.cfg  setup.py
.github/workflows/: eslint.yml  typing.yml  ui.yml
.progressivis/: bookmarks
.progressivis/widget_settings/AnyVegaW/: bar_chart.json  line_chart.json  scatterplot.json
.progressivis/widget_settings/CsvLoaderW/: raw_weather.json  taxis.json  taxis_filtered.json  weather  weather.json
ipyprogressivis/: MANIFEST.in  __init__.py  _frontend.py  _version.py  app.py  hook_tools.py  install.json  ipyfuncs.py  ipywel.py  jupyter-progressivis.json  magics.py  pre_save.py  pre_save_md.py  pre_save_x.py
ipyprogressivis/csv_sniffer/: backend.py  callbacks.py  sniffer.py
ipyprogressivis/js/: eslint.config.mjs  package.json  webpack.config.js
ipyprogressivis/js/css/: main.css  quality_visualization.css  sparkline-progressbar.css
ipyprogressivis/js/nb/: ProgressiBook.ipynb
ipyprogressivis/js/schema/: plugin.json
ipyprogressivis/js/src/: backup.js  cell_out.js  commands.js  config-editor.jsx  contour_density.js  dag_widget.js  data_table.js  embed.js  extension.js  functions.js  index.js  json_editor.js  json_html.js  knn_kernel.js  labplugin.js  module_graph.js  previmages.js  quality_visualization.js  scatterplot.js  sensitive_html.js  sparkline_progressbar.js  talker.js
ipyprogressivis/nbwidgets/: __init__.py  _stacked_hist_schema.py  backup.py  csv_sniffer.py  dag_widget.py  data_table.py  df_grid.py  iscaler.py  json_html.py  module_graph.py  plotting_progressbar.py  previmages.py  psboard.py  scatterplot.py  sensitive_html.py  slot_wg.py  sparkline_progressbar.py  talker.py  utils.py  vega.py
ipyprogressivis/nbwidgets/stage_widgets/: __init__.py  aggregate.py  columns.py  constructor.py  csv_loader.py  desc_stats.py  facade_creator.py  group_by.py  heatmap.py  histogram.py  iscaler.py  join.py  multi_series.py  parquet_loader.py  scatterplot.py  utils.py
ipyprogressivis/notebook_templates/: ProgressiBook.ipynb
ipyprogressivis/views/: __init__.py  _main.py  corr.py  quality.py  sliders2d.py  util.py  vegamap2d.py
ipyprogressivis/widgets/: __init__.py  backup.py  cell_out.py  contour_density.py  control_panel.py  csv_sniffer.py  dag_widget.py  data_table.py  df_grid.py  iscaler.py  json_editor.py  knn_kernel.py  previmages.py  psboard.py  quality_visualization.py  scatterplot.py  sensitive_html.py  slot_wg.py  utils.py
ipyprogressivis/widgets/chaining/: README.md  __init__.py  _js.py  aggregate.py  any_vega.py  code_cell.py  columns.py  computed_view.py  constructor.py  correlation.py  csv_loader.py  custom.py  custom_loader.py  desc_stats.py  dump_table.py  facade_creator.py  group_by.py  heatmap.py  histogram.py  iscaler.py  join.py  knn_density.py  loaders.py  mb_kmeans.py  mc_density_map.py  multi_series.py  parquet_loader.py  parquet_sniffer.py  quantiles.py  range_query_2d.py  scatterplot.py  snippet.py  tsne2d.py  utils.py
jupyter-config/jupyter_server_config.d/: ipyprogressivis.json
mypy/: schema_plugin.py
notebooks/: CSVSniffer.ipynb  CSVSnifferRestore.ipynb  CSVSnifferSave.ipynb  Constructor.ipynb  ExampleDataTable.ipynb  ExampleDataTablePandas.ipynb  ExampleProgressBar.ipynb  Heatmap-demo.ipynb  KNNKernelDemo.ipynb  MBKMeansDemo.ipynb  MBKMeansNYCTaxis.ipynb  MBKMeansSimpleDemo.ipynb  MBKMeansWithLabelsDemo.ipynb  MBKMeansWithLabelsDemoVariant.ipynb  MulticlassScatterplotDemo.ipynb  QualityVisualization.ipynb  mb_kmeans_cluster_s1.ipynb  mb_kmeans_taxis.ipynb  mnist_tsne2d.ipynb  scenario_using_snippets.ipynb  simple-views-demo.ipynb  taxis_borough.ipynb  taxis_borough_nosql.ipynb  taxis_precipitations_line_chart.ipynb  taxis_precipitations_line_chart.md  taxis_precipitations_scatterplot.ipynb  taxis_trips_density_map.ipynb  trip-rain-corr.ipynb  trip_rain_corr.ipynb  userguide-widgets1.0.ipynb  userguide-widgets1.1.ipynb  userguide-widgets1.1.md
recipe/: conda_build_config.yaml  meta.yaml  run_test.py
snippets/: blobs_table.py  csv_as_array.py  nan_to_zero.py  rain_level.py  range_query_2d_with_slider.py  taxis_mc_filter.py  taxis_zones.py
tools/: HOWTO.md  HOWTO.ml  hatch_build.sh  merge_nb_markdown.py  nb_to_doc_html.py
ui-tests/: package.json
ui-tests/tests/: end2end.test.ts
ui-tests/tests/notebooks/: dag.ipynb  simple_widgets.ipynb  vega.ipynb
