[metadata]
name = ipyprogressivis
author = Jean-Daniel Fekete, Christian Poli
author_email=jean-daniel.fekete@inria.fr
version = attr: ipyprogressivis._version.__version__
description = A Custom Jupyter Widget Library for Progressivis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/progressivis/ipyprogressivis
keywords = ipython, widgets, Jupyter, JupyterLab, JupyterLab3
license = BSD 2-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages =
	 ipyprogressivis
install_requires =
    ipywidgets>=7.6.0,<9
    traitlets>=4.3.0
    traittypes>=0.0.6
    numpy>=1.10.4,<2.0.0
    pandas>=1.0.0,<3.0.0
    ipydatawidgets
    progressivis
    lz4
python_requires = >=3.9
